fix scrollbar styling

--- a/css/global.css
+++ b/css/global.css
@@ -75,6 +75,7 @@ img {
   width: 100%;
   height: 100%;
   background: var(--color-bg);
+  overflow: hidden !important;
 }
 
 .callout {
@@ -84,4 +85,19 @@ img {
   background-color: rgba(255, 255, 255, 0.125);
   border-radius: 12px;
   margin-bottom: 2em;
+}
+
+/* scrollbar styling */
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.6);
 }
